# iam-policy-library

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
src/: cloudwatch-logs.md  ecr.md  ecs.md  iam.md  index.md  s3.md  ses.md
src/assets/: extra.css
theme_overrides/: main.html
