[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Peter Baumgartner", email = "pete@apppack.io"},
]
dependencies = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.0",
    "pymdown-extensions>=9.9.2",
    "mkdocs-macros-plugin>=0.7.0",
    "setuptools>=67.4.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
